# UshioNN

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg-configuration.json
docs/design/: architecture.md  classes.md  classes.mmd  function_class.md  module_class.md  tensor_class.md
include/accelerator/: cuda_stream.h  device_context.h  kernel_configurator.h
include/core/: allocator.h  common.h  device.h  error_codes.h  shape.h  simd.h  storage.h  storage_impl.h  strides.h  tensor.h  tensor_impl.h  type.h  variable.h
include/cuda/: cuda_utils.cuh  cuda_utils.h
include/function/: add.h  context.h  elementwise_mul.h  function.h  matmul.h  mul.h  relu.h  softmax.h
include/graph/: graph.h  graph_executor.h  graph_topologicalsort.h  state_dict.h
include/kernel/cpu/: add_cpu.h  elementwise_mul_cpu.h  matmul_cpu.h  mul_cpu.h
include/kernel/gpu/: add_gpu.h  elementwise_mul_gpu.h  matmul_gpu.h  mul_gpu.h
include/layers/: activation.h  batch_norm.h  conv1d.h  conv2d.h  conv3d.h  layers.h  linear.h
include/memory/: allocator.h  allocator.hpp  cpu_allocator.h  cuda_allocator.h
include/model/: model.h
include/running/: sequential.h
include/utils/: common.h  constant.h  log_macro.h  logger.hpp  parser.h  safetensor_parser.h  state_dict.h
src/: CMakeLists.txt
src/core/: allocator.cpp  storage.cpp  storage_impl.cpp  tensor.cpp  tensor_impl.cpp  variable.cpp
src/cuda/: activation.cu  allocator.cu  cuda_allocator.cu  cuda_utils.cu  storage.cu  storage_impl.cu  tensor.cu  tensor_impl.cu
src/function/: add.cpp  elementwise_mul.cpp  matmul.cpp  mul.cpp  softmax.cpp
src/kernel/cpu/: add_cpu.cpp  elementwise_mul_cpu.cpp  matmul_cpu.cpp  mul_cpu.cpp
src/kernel/gpu/: add_gpu.cu  elementwise_mul_gpu.cu  matmul_gpu.cu  mul_gpu.cu
src/layers/: activation.cpp  common.cpp  layers.cpp
src/memory/: allocator.cpp  cpu_allocator.cpp  cuda_allocator.cu
src/utils/: common.cpp  logger.cpp
tests/: CMakeLists.txt  tensor_test.cpp
